--- a/app/views/page_editions/edit_partials/_form.html.slim
+++ b/app/views/page_editions/edit_partials/_form.html.slim
@@ -117,21 +117,26 @@ ruby:
         span' This page is currently being redirected to:
         span = link_to set_destination(@page_edition.redirect.destination)
 
+  - if policy(@page_edition).publish?
+    hr
+    h3 Status
+    .row.form-section
+      .col-md-6.form-group
+        = f.label :publish_at, "Publish date"
+        = f.datetime_select :publish_at
+
+      .col-md-6.form-group
+        = f.label :archive_at, "Unpublish date"
+        = f.datetime_select :archive_at
+
   hr
   .form-footer
-    .text-right
-      .checkbox.checkbox-inline
-        - if @page_edition.draft? || @page_edition.archived?
-          label
-            = check_box_tag :published
-            | Publish?
-        - elsif @page_edition.published?
-          label
-            = check_box_tag :archived
-            | Archive?
-
-      = f.submit 'Save', class: 'btn btn-biola'
-      = link_to "Cancel", page_editions_path, class: 'btn btn-link'
+    .pull-right.form-inline
+      - (@page_edition.aasm.events & policy(@page_edition).permitted_aasm_events).each do |event|
+        .form-group.pull-right.pad-right
+          = f.submit event.to_s.titleize, name: 'transition', class: 'btn btn-biola'
+      .form-group.pull-right.pad-right
+        = f.submit "Save", class: 'btn btn-default'
 
 
 javascript:
