--- a/app/views/events/edit_partials/_form.html.slim
+++ b/app/views/events/edit_partials/_form.html.slim
@@ -107,9 +107,34 @@
             = f.text_field :contact_phone, class: 'form-control'
 
 
-      / .row.form-section
-      /   = render 'shared/image_crop', f: f, object: @event
-      / hr
+      .row.form-section
+        .col-md-12
+          hr
+          h3 Image
+
+          .form-group
+            .upload_button_holder
+              .fileinput.fileinput-new.input-group data-provides="fileinput"
+                .form-control data-trigger="fileinput"
+                  i.glyphicon.glyphicon-file.fileinput-exists
+                  span.fileinput-filename
+                span.input-group-addon.btn.btn-default.btn-file
+                  span.fileinput-new Select file
+                  span.fileinput-exists.btn-file-change Change
+                  = f.file_field :image, class: 'file'
+                a.input-group-addon.btn.btn-default.fileinput-exists.btn-file-dismiss data-dismiss="fileinput" href="#"  Remove
+
+            span.status
+
+          .row.current_photo style="display: #{'none' unless @event.image_url};"
+            .col-md-6
+              p: strong Full Photo
+              = image_tag @event.image.url(:large), class: 'img-thumbnail', style: 'max-height: 300px;'
+            .col-md-6
+              p: strong Thumbnail
+              = image_tag @event.image.url(:thumb), class: 'img-thumbnail'
+
+      hr
 
       h3 Publishing Details
       .row.form-section
