--- a/app/views/page_editions/edit_partials/_design.html.slim
+++ b/app/views/page_editions/edit_partials/_design.html.slim
@@ -18,20 +18,37 @@
             div#note
               strong> NOTE:
               | When referencing classes or ID's please make sure to use something very unique and be very explicit in what you are referencing.
-
+          
+        / Old form for CSS:
+          / .form-group
+          /   = f.label :design_css, 'CSS'
+          /   = wcms_component 'forms/css_editor',
+          /     form: f,
+          /     attribute: :design_css,
+          /     value: @page_edition.design_css
+          
           .form-group
-            = f.label :design_css, 'CSS'
-            = wcms_component 'forms/css_editor',
+            = f.label :end_of_head_html, 'End of Head HTML'
+            = wcms_component 'forms/end_of_head_html_editor',
               form: f,
-              attribute: :design_css,
-              value: @page_edition.design_css
+              attribute: :end_of_head_html,
+              value: @page_edition.end_of_head_html
 
+        / Old form for Javascript:
+          / .form-group
+          /   = f.label :design_js, 'Javascript'
+          /   = wcms_component 'forms/javascript_editor',
+          /     form: f,
+          /     attribute: :design_js,
+          /     value: @page_edition.design_js
+          /     
           .form-group
-            = f.label :design_js, 'Javascript'
-            = wcms_component 'forms/javascript_editor',
+            = f.label :end_of_body_html, 'End of Body HTML'
+            = wcms_component 'forms/end_of_body_html_editor',
               form: f,
-              attribute: :design_js,
-              value: @page_edition.design_js
+              attribute: :end_of_body_html,
+              value: @page_edition.end_of_body_html
+
 
 
       .form-footer
