--- a/app/views/events/_menu.html.slim
+++ b/app/views/events/_menu.html.slim
@@ -12,8 +12,9 @@
       = menu.add_item('SEO') { edit_event_path(@event, page: 'seo') } if policy(@event).can_manage?(:seo)
       = menu.add_item('History') { object_index_wcms_components_changes_path(klass: Event, id: @event.id) } if policy(@event).can_manage?(:logs)
 
-  .list-group
-    = link_to fa_icon('files-o', text: "Duplicate Event"), duplicate_event_path(@event), class: 'list-group-item' if wcms_source? @event
+  - if policy(@event).duplicate?
+    .list-group
+      = link_to fa_icon('files-o', text: "Duplicate Event"), duplicate_event_path(@event), class: 'list-group-item'
 
   .list-group
     .list-group-item.list-group-item-info
