--- a/app/views/calendars/_menu.html.slim
+++ b/app/views/calendars/_menu.html.slim
@@ -7,3 +7,4 @@
       = menu.add_item('Sections') { edit_calendar_path(@calendar, page: 'calendar_sections') }
       = menu.add_item('SEO') { edit_calendar_path(@calendar, page: 'seo') } if policy(@calendar).can_manage?(:seo)
       = menu.add_item('History') { object_index_wcms_components_changes_path(klass: @calendar.class, id: @calendar.id) } if policy(@calendar).can_manage?(:logs)
+      = menu.add_item('Permissions') { edit_calendar_path(@calendar, page: 'permissions') } if policy(@calendar).can_manage?(:permissions)
