--- a/app/views/articles/edit_partials/_form.html.slim
+++ b/app/views/articles/edit_partials/_form.html.slim
@@ -11,6 +11,10 @@
           = f.text_field :title, class: 'form-control'
 
         .form-group.col-md-4.col-sm-6.col-xs-12
+          = f.label :subtitle
+          = f.text_field :subtitle, class: 'form-control'
+
+        .form-group.col-md-4.col-sm-6.col-xs-12
           = f.label :ws_source
           = f.text_field :ws_source, class: 'form-control', disabled: true
 
