--- a/app/assets/stylesheets/components/_crop_preview.scss
+++ b/app/assets/stylesheets/components/_crop_preview.scss
@@ -1,7 +1,7 @@
 ///////////
 // Modal Image CSS
 ///////////
-.thumbnail-modal {
+.crop-modal {
   .modal {
     .thumb { width:100px; height:100px; overflow:hidden; }
     .preview { margin-top: 20px; background-color: rgba(0,0,0, 0.4); padding: 10px; }
