--- a/app/views/shared/_image_crop.html.slim
+++ b/app/views/shared/_image_crop.html.slim
@@ -24,16 +24,16 @@
   .row.current_photo style="display: #{'none' unless object.image_url};"
     .col-md-6
       p: strong Full Photo
-      = image_tag object.image.url, class: 'img-thumbnail', style: 'max-height: 300px;'
+      = image_tag object.image.url(:medium), class: 'img-thumbnail', style: 'max-height: 300px;'
     .col-md-6
-      p: strong Thumbnail
-      = image_tag object.image.url(:thumb), class: 'img-thumbnail'
+      p: strong Banner
+      = image_tag object.image.url(:x_large), class: 'img-thumbnail'
 
-.thumbnail-modal
+.crop-modal
   .modal.fade.thumb-picker data-backdrop="static" data-keyboard="false"
     .image_holder
-      .thumb
-        img id="preview"
+      / .thumb
+      /   img id="preview"
       .preview
         img
       .image_buttons.pull-right
