Added update transition at time method when transitioning objects (#114)
* Added update transition at time method when transitioning objects

* Just going to create the missing versions.

--- a/app/views/shared/_image_crop.html.slim
+++ b/app/views/shared/_image_crop.html.slim
@@ -1,7 +1,7 @@
 .col-md-12
   hr
   h3 Image
-  .text-muted = "(5x3 or 5x2 for a banner. Between 800px and 2048px wide with the subject in the center of the photo)"
+  .text-muted = "Ratio: 5x3 (or 5x2 for a banner). Between 800px and 2048px wide with the subject in the center of the photo."
 .col-md-12
   .form-group
     .upload_button_holder
