--- a/app/views/articles/_menu.html.slim
+++ b/app/views/articles/_menu.html.slim
@@ -5,6 +5,7 @@
     = menu_block(class: 'list-group-item') do |menu|
       = menu.add_item('Article', default: true) { edit_article_path(@article, page: 'form') }
       = menu.add_item('Gallery Photos') { edit_article_path(@article, page: 'gallery_photos') } if policy(@article).can_manage?(:gallery_photos)
+      = menu.add_item('Presentation Data') { edit_article_path(@article, page: 'presentation_data') } if policy(@article).can_manage?(:presentation_data)
       = menu.add_item('SEO') { edit_article_path(@article, page: 'seo') } if policy(@article).can_manage?(:seo)
       = menu.add_item('Design') { edit_article_path(@article, page: 'design') } if policy(@article).can_manage?(:design)
       = menu.add_item('History') { object_index_wcms_components_changes_path(klass: @article.class, id: @article.id) } if policy(@article).can_manage?(:logs)
