--- a/app/views/events/edit_partials/_form.html.slim
+++ b/app/views/events/edit_partials/_form.html.slim
@@ -252,15 +252,7 @@
 
       - if policy(@event).publish?
         hr
-        h3 Status
-        .row.form-section
-          .col-md-6.form-group
-            = f.label :publish_at, "Publish date"
-            = f.datetime_select :publish_at
-
-          .col-md-6.form-group
-            = f.label :archive_at, "Unpublish date"
-            = f.datetime_select :archive_at
+        = render 'shared/state_dates', f: f, object: @event, hide_archive: true
 
       hr
       .form-footer
