--- a/app/views/page_editions/edit_partials/_form.html.slim
+++ b/app/views/page_editions/edit_partials/_form.html.slim
@@ -119,15 +119,7 @@ ruby:
 
   - if policy(@page_edition).publish?
     hr
-    h3 Status
-    .row.form-section
-      .col-md-6.form-group
-        = f.label :publish_at, "Publish date"
-        = f.datetime_select :publish_at
-
-      .col-md-6.form-group
-        = f.label :archive_at, "Unpublish date"
-        = f.datetime_select :archive_at
+    = render 'shared/state_dates', f: f, object: @page_edition, hide_archive: false
 
   hr
   .form-footer
