--- a/app/views/articles/edit_partials/_form.html.slim
+++ b/app/views/articles/edit_partials/_form.html.slim
@@ -106,7 +106,7 @@
           div class="#{'field_with_errors' if @article.errors.include?(:author)}"
             => label_tag "Authors"
             - if permission_to_edit?(@article, :author_ids)
-              = text_field_tag :a, nil, id: 'users', value: @article.authors.to_a.map(&:biola_email).join('|'), required: true, 'data-source' => search_articles_url, class: 'form-control people_search tags-input'
+              = text_field_tag :a, nil, id: 'a', value: @article.authors.to_a.map(&:biola_email).join('|'), 'data-source' => search_articles_url, class: 'form-control people_search tags-input'
               em.help-text = "Type author's name"
             - else
               br
