Add slug field to event collection form (#123)
* Add slug field to event collection form

* quickfix delete errors

--- a/app/views/event_collections/edit_partials/_form.html.slim
+++ b/app/views/event_collections/edit_partials/_form.html.slim
@@ -8,7 +8,11 @@
           .form-group
             = f.label :title
             = f.text_field :title, class: 'form-control', title: @event_collection.title
-
+            
+          .form-group
+            = f.label :slug
+            = f.text_field :slug, class: 'form-control'
+            
       hr
       .form-footer
         .pull-right.form-inline
