--- a/app/views/articles/edit_partials/_form.html.slim
+++ b/app/views/articles/edit_partials/_form.html.slim
@@ -44,13 +44,18 @@
           = f.text_field :slug, class: 'form-control'
           em.help-text = 'leave blank to autofill'
 
-        .form-group.col-sm-4.col-xs-12
+        .form-group.col-md-6.col-sm-6.col-xs-12
+          = f.label :external_url
+          = f.text_field :external_url, class: 'form-control', placeholder: 'http://www.thegoodbookblog.com/'
+          em.help-text = 'only use if article is housed offsite'
+
+        .form-group.col-sm-3.col-xs-12
           .checkbox
             label
               => f.check_box :featured
               | Featured
 
-        .form-group.col-sm-4.col-xs-12
+        .form-group.col-sm-3.col-xs-12
           .checkbox
             label
               => f.check_box :press_release
