--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -27,6 +27,7 @@ html lang="en-us"
         {body: 'Data Templates', url: :presentation_data_templates_path},
         {body: 'Events', url: :events_path},
         {body: 'Event Collections', url: :event_collections_path},
+        {body: 'Features', url: :features_path},
         {body: 'Important Dates', url: :important_dates_path},
         {body: 'Media', url: :media_path},
         {body: 'Menus', url: :menus_path},
