Unset primary pages (#130)
* Allow admins to unset primary pages
Remove therubyracer

* I didn’t mean for this to be on this branch.

* Move td into the right place

--- a/app/views/shared/_source_pages.html.slim
+++ b/app/views/shared/_source_pages.html.slim
@@ -14,11 +14,12 @@ ruby:
         - source.page_editions.each do |page|
           tr
             td = link_to page, page
-            td
-              - if page.id.to_s == source.primary_page_id
-                = "Primary"
-              - else
-                = button_to "Make Primary", source, {method: :patch, params: {"#{name}[primary_page_id]" => page.id.to_s, page: 'pages'}, class: 'btn btn-default'}
+            - if page.id.to_s == source.primary_page_id
+              td = "Primary"
+              td = button_to "Unset", source, {method: :patch, params: {"#{name}[primary_page_id]" => nil, page: 'pages'}, class: 'btn btn-default'}
+            - else
+              td
+              td = button_to "Make Primary", source, {method: :patch, params: {"#{name}[primary_page_id]" => page.id.to_s, page: 'pages'}, class: 'btn btn-default'}
 
       - else
         .alert.alert-info This #{friendly_name} has no pages tied to it.
