--- a/app/views/features/new.html.slim
+++ b/app/views/features/new.html.slim
@@ -1,3 +1,3 @@
 .container.page
   h2.title New feature
-  .profile-pages = render 'features/pages/feature'
+  .profile-pages = render 'features/edit_partials/form'
