--- a/app/assets/stylesheets/components/_page_navigator.scss
+++ b/app/assets/stylesheets/components/_page_navigator.scss
@@ -12,3 +12,12 @@
     button:focus { outline: none; }
   }
 }
+
+.nav-button {
+  margin: 0;
+  list-style: none;
+  padding-right: 5px;
+  padding-left: 5px;
+
+  > li > a { display: block; }
+}
